[package]
name = "daemonize"
version = "0.5.0"
license = "MIT OR Apache-2.0"
authors = ["Fedor Gogolev <knsd@knsd.net>", "Oliver Old <mail@oold.dev>"]
repository = "https://github.com/oold/daemonize"
readme = "../README.md"
description = "Library to enable your code run as a daemon process on Unix-like systems."
keywords = ["daemon", "daemonize", "unix"]
categories = ["os::unix-apis"]

[features]
tester = ["dep:arraystring", "dep:os_pipe"]

[dependencies]
arraystring = { version = "0.3.0", optional = true }
errno = "0.3.11"
libc = "0.2.171"
os_pipe = { version ="1.2.1", optional = true }

[dev-dependencies]
tempfile = "3.19.1"
