[package]
name = "daemonize2"
version = "0.6.1"
license = "MIT OR Apache-2.0"
authors = ["Fedor Gogolev <knsd@knsd.net>", "Oliver Old <mail@oold.dev>"]
repository = "https://github.com/oold/daemonize"
documentation = "https://docs.rs/daemonize2"
readme = "README.md"
description = "Run your code as SysV daemon on Unix-like systems."
keywords = ["daemon", "daemonize", "fork", "sysv", "unix"]
categories = ["os", "os::unix-apis"]
edition = "2024"
exclude = [".github/**", "deploy/**"]

[[example]]
name = "complex"
doc-scrape-examples = true

[features]
# This feature is for testing purposes only. It enables additional functionality needed for
# implementing the tester binary.
tester = ["dep:arraystring", "dep:os_pipe"]

[target.'cfg(unix)'.dependencies]
arraystring = { version = "0.3.0", optional = true }
errno = "0.3.11"
libc = "0.2.171"
os_pipe = { version = "1.2.1", optional = true }

[target.'cfg(unix)'.dev-dependencies]
tempfile = "3.19.1"
